<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|center_horizontal">

                <TextView
                    android:id="@+id/settings_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:gravity="center|center_horizontal"
                    android:text="@string/title_settings"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|center_horizontal">

                <Button
                    android:id="@+id/button_quit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:background="#603030"
                    android:textColor="#000000"
                    android:gravity="center|center_horizontal"
                    android:onClick="onQuit"
                    android:text="@string/settings_quit" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/label_vertical_orientation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/settings_label_vertical_orientation"
                    android:textColor="#008F00"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Spinner
                    android:id="@+id/verticalOrientation"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:entries="@array/orientation_entries" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/label_horizontal_orientation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/settings_label_horizontal_orientation"
                    android:textColor="#008F00"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Spinner
                    android:id="@+id/horizontalOrientation"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:entries="@array/orientation_entries" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <CheckBox
                    android:id="@+id/positionLock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:textColor="#008F00"
                    android:text="@string/settings_label_lock_widget" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <TextView
                    android:id="@+id/label_camera_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/settings_label_camera_mode"
                    android:textColor="#008F00"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <Spinner
                    android:id="@+id/camera_mode"
                    android:layout_width="100dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:entries="@array/camera_mode_entries" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <CheckBox
                    android:id="@+id/camera_mode_lock"
                    android:layout_width="206dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/settings_label_lock_camera_mode"
                    android:textColor="#008F00" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/label_sound_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/settings_label_sound_start"
                    android:textColor="#008F00"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sound_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:onClick="onStartSoundEdit"
                    android:text="@string/sound_title_default"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/label_sound_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/settings_label_sound_end"
                    android:textColor="#008F00"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sound_end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:onClick="onEndSoundEdit"
                    android:text="@string/sound_title_default"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/label_battery_warning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:textColor="#008F00"
                    android:text="@string/settings_label_battery_warning"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <EditText
                    android:id="@+id/battery_warning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:inputType="text|textNoSuggestions"
                    android:textColor="#00DF00"
                    android:text="@string/battery_warning_default"
                    android:textSize="16sp" />
            </TableRow>

        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>